--- a/market/jpyx/ViewItem.html
+++ b/market/jpyx/ViewItem.html
@@ -389,8 +389,7 @@ docReady(function() {
     $.post(Constants.apiUrl,{
       requestType: 'getAccountCurrencies',
       account: account,
-      currency: Constants.JPYXId,
-      units: price
+      currency: Constants.JPYXId
     },
       function(payment){
         var amount = payment.units / 100; 
