Search by Category

--- a/market/eurx/SearchByCategory.html
+++ b/market/eurx/SearchByCategory.html
@@ -102,7 +102,6 @@
     <script src="../js/i18next.min.js"></script>
     <script src="../js/freemarket_localization_scripts.js"></script>
     <script src="../js/moment.min.js"></script>
-    
     <script>
     function searchCategory() {
     document.getElementById("table_body").innerHTML = "";
@@ -119,6 +118,7 @@
       var goods = request.goods[i];
       var data = JSON.parse(request.goods[i].description);
       var id = request.goods[i].goods;
+      if (data.c == "EURX") {
       var rows;
       rows += '<tr>';
       rows += '<td class="hidden-phone"><a href=\'ViewItem.html?setLng=' + fmlang + '&itemid=' + id + '\'>' + id + '</a></td>';
@@ -127,7 +127,7 @@
       rows += '</tr>';
     };
     $("#table_body").html(rows);
-    })};
+    }})};
     </script>
     <script>
     function searchTable() {
